fix AL model glpyhicon alignment

--- a/frontend/src/styles/smart.scss
+++ b/frontend/src/styles/smart.scss
@@ -383,3 +383,7 @@ li.disabled {
 .more-padding {
     padding-right: 10px;
 }
+
+.model_question_tooltip {
+    top: 5px;
+}
